# SLC

./: .gitignore  db.sqlite3  docker-compose.yml  dockerfile  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
cadastro/: models.py  tasks.py  urls.py  validators.py  views.py
cadastro/api/: api.py  schemas.py
cadastro/envios/: email_service.py  sms_service.py
cadastro/migrations/: 0001_initial.py  0002_alter_customuser_full_name.py  0002_codigoemail.py  0002_remove_codigo_resultado_codigo_email_codigo_telefone_and_more.py  0003_alter_customuser_telefone.py  0004_codigo_codigo_selecionado_delete_codigoemail_and_more.py
cadastro/templates/: cadastro.html  login.html
core/: api.py  asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
core/security/: security.py
filmes/: admin.py  apps.py  models.py  schemas.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
filmes/api/: api.py
filmes/migrations/: 0001_initial.py  0002_alter_gender_options_alter_movies_options_and_more.py  0002_movies_watch_count.py  0002_movieswatched.py  0002_videosprite_serie.py  0003_rename_movie_movies_video.py  0003_season_episode_serie_season_serie_episodewatched_and_more.py  0003_serie_gender.py  0004_movies_gender.py  0004_movies_poster_1200w_movies_poster_400w_and_more.py  0004_movieview.py  0005_alter_episode_episode_video_alter_movies_video.py  0005_avaliação.py  0006_alter_episode_episode_video_alter_movies_video.py  0007_alter_movies_video.py  0008_alter_episode_episode_video.py
filmes/services/: process.py  sprites.py  streaming.py
filmes/templates/: movie.html  (+1 more)
home/: models.py  signals.py  urls.py  views.py
ia/: apps.py  urls.py  views.py
payment/: models.py  urls.py  views.py
templates/: base.html
upload/: api.py  apps.py  fields.py  registry.py  services.py  widget.py  widgets.py
users/: managers.py  models.py  urls.py  views.py
(+51 files in other folders)
