[project]
name = "slc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.7",
    "django-allauth>=65.12.0",
    "django-ninja>=1.4.3",
    "django-ninja-jwt>=5.3.9",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "google-auth>=2.41.1",
    "pydantic[email]>=2.12.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
