[project]
name = "slc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery==5.6.2",
    "django==5.2.10",
    "django-allauth[socialaccount,mfa]==65.14.0",
    "django-ninja==1.5.3",
    "django-storages[s3]==1.14.6",
    "dotenv==0.9.9",
    "gunicorn==24.1.1",
    "pillow==12.1.0",
    "psycopg[binary]==3.3.2",
    "python-slugify==8.0.4",
    "redis==7.1.0",
    "requests==2.32.5",
    "whitenoise==6.11.0",
    "django-anymail[brevo]==14.0",
    "stripe==14.3.0",
    "openai>=2.16.0",
]

[dependency-groups]
dev = [
    "ruff==0.14.14",
]
